--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -26,4 +26,5 @@ jobs:
 
       - name: Deploy documentation
         run: |
-          mkdocs gh-deploy --force --config-file pokerstats/mkdocs.yml 
+          cd pokerstats
+          mkdocs gh-deploy --force
