--- a/pokerstats/mkdocs.yml
+++ b/pokerstats/mkdocs.yml
@@ -13,6 +13,13 @@ markdown_extensions:
 # Configura a navegação do site
 nav:
   - Início: index.md
+  - Visão do Produto e Projeto: 
+      - Cenário Atual do Cliente e do Negócio: unidade1/cenarioAtual.md
+      - Solução Proposta: unidade1/solucaoProposta.md
+      - Estratégias de Engenharia de Software: unidade1/estrategiaES.md
+      - Cronograma e Entregas: unidade1/cronogramaEntregas.md
+      - Interação entre Equipe e Cliente: unidade1/interacaoEquipeCliente.md
+      - Lições Aprendidas: unidade1/licoesAprendidas.md
 
 # Tema do MkDocs
 theme:
