docs: adiciona video apresentacao da unidade e pequenos ajustes em outros artefatos.

--- a/pokerstats/mkdocs.yml
+++ b/pokerstats/mkdocs.yml
@@ -21,6 +21,8 @@ nav:
       - Interação entre Equipe e Cliente: unidade1/interacaoEquipeCliente.md
       - Lições Aprendidas:
           - Unidade 1: unidade1/licoesAprendidas.md
+  - Entregas:
+    - Unidade 1: entregas/videoApresentacao.md
 
 # Tema do MkDocs
 theme:
