acrescentando entrega unidade 2

--- a/pokerstats/mkdocs.yml
+++ b/pokerstats/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
   - Evidencias: Evidencias/Evidencias.md
   - Entregas:
     - Unidade 1: entregas/videoApresentacao.md
+    - Unidade 2: entregas/videoApresentacao2.md
 
 theme:
   name: material
