--- a/pokerstats/mkdocs.yml
+++ b/pokerstats/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Backlog do Produto: backlog/BacklogDoProduto.md
   - Lições Aprendidas:
       - Unidade 1: unidade1/licoesAprendidas.md
+      - Unidade 2: unidade2/licoesAprendidas.md
   - Evidencias: Evidencias/Evidencias.md
   - Entregas:
     - Unidade 1: entregas/videoApresentacao.md
