acrescentando os meses faltantes no cronograma pela issue CRONOGRAMA #34

--- a/pokerstats/mkdocs.yml
+++ b/pokerstats/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
       - Engenharia de Requisitos: unidade2/EngenhariaDeRequisitos.md
       - Cronograma e Entregas: unidade1/cronogramaEntregas.md
       - Interação entre Equipe e Cliente: unidade1/interacaoEquipeCliente.md
-      - Backlog do Produto: unidade2/REQUISITOS_DE_SOFTWARE.md
+      - REQUISITOS DE SOFTWARE: unidade2/REQUISITOS_DE_SOFTWARE.md
       - DoR&DoD: unidade2/DoR&DoD.md
       - Backlog: unidade2/Backlog.md
   - Lições Aprendidas:
