--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ contourpy==1.3.3
 customtkinter==5.2.2
 cycler==0.12.1
 darkdetect==0.8.0
+et_xmlfile==2.0.0
 fonttools==4.60.1
 greenlet==3.2.4
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.3.4
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
