--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 altgraph==0.17.4
 contourpy==1.3.3
+coverage==7.12.0
 customtkinter==5.2.2
 cycler==0.12.1
 darkdetect==0.8.0
 et_xmlfile==2.0.0
 fonttools==4.60.1
 greenlet==3.2.4
+iniconfig==2.3.0
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.3.4
@@ -13,9 +15,13 @@ openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
+pluggy==1.6.0
+Pygments==2.19.2
 pyinstaller==6.16.0
 pyinstaller-hooks-contrib==2025.9
 pyparsing==3.2.5
+pytest==9.0.1
+pytest-cov==7.0.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 setuptools==80.9.0
